# Hackathon-I-Physical-AI-Humanoid-Robotics-Textbook-with-chatbot

./: .gitignore  Gemini.md  QWEN.md  README.md  abc.m
.specify/memory/: constitution.md
backend/: README.md  books.db  main.py  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: ai.py  books.py
backend/src/database/: session.py
backend/src/models/: book.py
backend/src/schemas/: ai.py  book.py
backend/src/utils/: db_init.py  exceptions.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2025-01-05-mdx-blog-post.md
frontend/blog/2021-08-26-welcome/: index.md
frontend/docs/: intro.md
frontend/docs/tutorial-basics/: 03-urdf-robot-description.md  05-isaac-sim-basics.md  07-conversational-robotics.md  08-capstone-humanoid.md  Tutorial 4 Gazebo Simulation.md  congratulations.md  create-a-document.md
frontend/docs/tutorial-extras/: 09-advanced-ros2.md  10-gazebo-advanced-physics.md  11-reinforcement-learning-humanoids.md  12-advanced-isaac-sim-usd.md  13-advanced-sensor-fusion.md  14-whole-body-control.md
frontend/src/css/: custom.css
frontend/src/pages/: chatbot.tsx  index.module.css  index.tsx
specs/001-ai-native-book-website/: spec.md  tasks.md
specs/001-embeddings-pipeline-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_cohere_client.py  test_config.py  test_models.py  test_text_extractor.py
(+20 files in other folders)
